--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,7 +22,7 @@ h1, h2, h3 {
 }
 
 .navbar, .home-callout {
-	//Gradient provided by @_igosh at uiGradient.com
+	/*Gradient provided by @_igosh at uiGradient.com */
 	background: #4e54c8;  /* fallback for old browsers */
 	background: -webkit-linear-gradient(to right, #8f94fb, #4e54c8);  /* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(to right, #8f94fb, #4e54c8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -30,6 +30,24 @@ h1, h2, h3 {
 
 .navbar {
 	border: none;
+}
+
+.navbar-default .navbar-brand {
+	color: white;
+}
+
+.navbar-default .navbar-nav > li > a {
+	color: white;
+}
+
+.navbar-default .navbar-brand:hover {
+	color: #fff;
+	opacity: 0.5;
+}
+
+.navbar-default .navbar-nav > li > a:hover {
+	color: #fff;
+	opacity: 0.5; 
 }
 
 .home-callout {
